# ess

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  LICENSE  README.md  SKILL.md
scripts/: install.sh
src/: lib.rs  main.rs
src/connectors/: gmail_api.rs  graph_api.rs  json_archive.rs  mod.rs
src/db/: migrations.rs  mod.rs  models.rs  schema.rs
src/indexer/: mod.rs  schema.rs
src/mcp/: mod.rs  server.rs  tools.rs
src/output/: json.rs  mod.rs  table.rs
src/search/: filters.rs  mod.rs
tests/: connectors_search_integration.rs  foundation_integration.rs
