[package]
name = "ess"
version = "0.1.0"
edition = "2021"
description = "Email Search Service"
license = "MIT"
repository = "https://github.com/krasmussen37/ess"
homepage = "https://github.com/krasmussen37/ess"
keywords = ["email", "search", "mcp", "tantivy"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
rusqlite = { version = "0.32", features = ["bundled", "modern_sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tantivy = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
html2text = "0.12"
regex = "1"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
glob = "0.3"
unicode-width = "0.1"
ring = "0.17"
base64 = "0.22"
